<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">442244316614908</string>
    <string name="fb_login_protocol_scheme">fb442244316614908</string>
    <string name="representative_number">0518773333</string>
    <string name="app_name">mediQ</string>
    <string name="slogan">Healthcare at your door step</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">mediQ</string>
    <string name="menu_lab_reports">My Lab reports</string>
    <string name="menu_my_order">My Orders</string>
    <string name="menu_faqs">FAQ\'s</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="format_google_map_intent_uri" formatted="true" translatable="false">geo:%s?q=%s(%s)</string>
    <string name="close">Close</string>
    <string name="error_subtitle_default">Something went wrong. Please try again.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="error_no_network">Your device needs to be online to use mediQ. Please check your network
        connection and try again.
    </string>
    <string name="error_title_default">Oops!</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">
        <u>Forgot Password</u>
    </string>
    <string name="login_checkbox_text">Remember me</string>
    <string name="login">Login</string>
    <string name="login_signup_txt">Don\'t have an account? Please</string>
    <string name="register_now">
        <u>Sign up</u>
    </string>
    <string name="password">Password</string>
    <string name="corporate_sign_up">Corporate Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or_text">or</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">username</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email address</string>
    <string name="skip">
        <u>Skip</u>
    </string>
    <string name="price_unit">*The prices are per unit/tablet/capsule</string>
    <string name="price_change">*The prices are subject to change without prior notice</string>
    <string name="privacy_policy_text">By continuing you agree to our</string>
    <string name="terms"><u>Terms</u></string>
    <string name="policy"><u>Privacy Policy.</u></string>
    <string name="already_have">If you\'re already a user then</string>
    <string name="invalid_email_msg">Please enter a valid email address</string>
    <string name="invalid_password_msg">Please enter correct password</string>
    <string name="password_len_msg">Password is too short</string>
    <string name="password_not_match">Password does not match</string>
    <string name="invalid_phone_no_msg">Please enter a valid phone number</string>
    <string name="invalid_promo_code_msg">Please enter a valid promo code</string>
    <string name="invalid_first_name_msg">Please enter correct first name</string>
    <string name="invalid_last_name_msg">Please enter correct last name</string>
    <string name="invalid_task_title_msg">Please enter title</string>
    <string name="invalid_verify_code_msg">Please enter a valid verification code that has been send to you as a text
        message.
    </string>
    <string name="empty_phone_no_msg">Please enter phone number</string>
    <string name="empty_postcode_msg">Please enter postcode</string>
    <string name="retry">Retry</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="email">e-mail</string>
    <string name="email_caps">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="promo_code">Promo code (optional)</string>
    <string name="search">Search</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile">Profile</string>
    <string name="error">Error</string>
    <string name="no_data">No data available</string>
    <string name="messages">Messages</string>
    <string name="term_conditions">Term &amp; Conditions</string>
    <string name="faqs">FAQs</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="my_orders">My Orders</string>
    <string name="bbn_phone_view_behavior" translatable="false" tools:ignore="UnusedResources">
        com.Doctoor.app.widget.bottomnavigation.BottomBehavior
    </string>
    <string name="bbn_tablet_view_behavior" translatable="false" tools:ignore="UnusedResources">
        com.Doctoor.app.widget.bottomnavigation.TabletBehavior
    </string>
    <string name="bbn_default_view_behavior" translatable="false" tools:ignore="UnusedResources">
        com.Doctoor.app.widget.bottomnavigation.BottomBehavior
    </string>
    <string name="bbn_badgeProvider" translatable="false" tools:ignore="UnusedResources">
        com.Doctoor.app.widget.bottomnavigation.BadgeProvider
    </string>
    <string name="bbn_fab_default_behavior" translatable="false" tools:ignore="UnusedResources">
        com.Doctoor.app.widget.bottomnavigation.FloatingActionButtonBehavior
    </string>
    <string name="online">Online</string>
    <string name="lab_icon">lab_icon</string>
    <string name="lab_tests">Lab Test</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="home_medical">mediQ</string>
    <string name="home_medical_service">Medical Service</string>
    <string name="service">Services</string>
    <string name="desc_forward_arrow">forward arrow</string>
    <string name="title_upload_presc">Upload Prescription</string>
    <string name="create_account">Create an account</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="phone_no">+923001234567</string>
    <string name="desc_facebook">Phone No.</string>
    <string name="desc_google">Phone No.</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="whats_ur_gender">What\'s your gender?</string>
    <string name="default_required_validation_message">This field is required.</string>
    <string name="default_required_length_message_min_max">The input must have length between %1$d
        and %2$d.
    </string>
    <string name="default_required_length_message_min">The input length must be greater than
        or equal to %1$d characters.
    </string>
    <string name="default_required_length_message_max">The input length must be less than or
        equal to %1$d characters.
    </string>
    <string name="default_regex_validation_message">The field value does not match the
        required format.
    </string>
    <string name="forgot_password_desc">It is a long established fact that a reader will be\ndistracted by the readable
        content of a page when looking at it\'s layout.
    </string>
    <string name="name_validation_error">Name is not valid</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="code_verification">Verification code</string>
    <string name="enter_code_verification">Enter Verification Code</string>
    <string name="resend">Resend 01:00</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="dummy_dob">01/05/1195</string>
    <string name="popular_items">Popular Items</string>
    <string name="proceed">Proceed</string>
    <string name="corporation_code">Corporation Code</string>
    <string name="corporate_signup">Corporate sign up</string>
    <string name="change_city">Change City</string>
    <string name="keep_location">Keep Lahore</string>
    <string name="select_city_location_desc">Your location is automatically set to Islamabad. This will impact any search that you perform</string>
    <string name="get_started">Get Started</string>
    <string name="password_forgot">Forgot Password</string>
    <string name="upload">Upload</string>
    <string name="prescription">Prescription</string>
    <string name="chughtai">Chughtai</string>
    <string name="lab">Lab</string>
    <string name="excel">Excel</string>
    <string-array name="city_array">
        <item>Lahore</item>
        <item>Karachi</item>
        <item>Islamabad</item>
    </string-array>
    <string-array name="province_array">
        <item>Punjab</item>
    </string-array>
    <string name="dob">DOB</string>
    <string name="city">City</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="upload_prescription_bold">Upload
        <b><b>Prescription</b></b>
    </string>
    <string name="service_type_heading_medical">Home Medical Services</string>
    <string name="services_provider">Service Provider</string>
    <string name="medical_equipment">Medical Equipment Purchase</string>
    <string name="medical_equipment_rental">Medical Equipment Rental</string>
    <string name="_equipment">Equipment</string>
    <string name="edit_icon">Edit icon</string>
    <string name="prescription_instruction_1">Do not crop out any part of the prescription image</string>
    <string name="prescription_instruction_2">Avoid uploading a blurred or unclear image of the prescription</string>
    <string name="prescription_instruction_3">Do not crop out any part of the prescription image</string>
    <string name="prescription_instruction_4">Do not crop out any part of the prescription image</string>
    <string name="the_prescription">The Prescription</string>
    <string name="uploading_guide">Uploading Guide</string>
    <string name="blood_glucose_random">blood glucose random</string>
    <string name="rupees">Rs.</string>
    <string name="five_hundred">500</string>
    <string name="sample_collection">Sample Collection</string>
    <string name="attendant">(attendant)</string>
    <string name="dummy_time">10:00 – 16:00</string>
    <string name="availability">Availability</string>
    <string name="corporate_description">It is a long established fact that a reader will be\ndistracted by the readable content of a page when\nlooking at its layout.</string>
    <string name="johan">Johan</string>
    <string name="forgot_password_instructions">To recover your password, you need to enter your registered phone number. We will sent the recovery code to phone number.</string>
    <string name="verification_code_description">We have sent you a verification code via SMS for mobile number verification.</string>
</resources>