<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_verified_user"
                android:title="@string/menu_home"

        />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_verified_user"
                android:title="@string/menu_lab_reports"
                />
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_verified_user"
                android:title="@string/menu_my_order"
        />
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_verified_user"
                android:title="@string/menu_faqs"
               />
        <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_verified_user"
                android:title="@string/menu_contact"
               />

    </group>

</menu>
