<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="testCartItemVM" type="com.Doctoor.app.ui.modules.cart.CartItemVM"/>
    </data>

    <com.google.android.material.card.MaterialCardView
            style="@style/Doctoor.App.Layout.CardView.MedicineDetails"
            android:layout_height="wrap_content">

        <LinearLayout style="@style/Doctoor.App.Layout.LinearLayout.Horizontal.match_parent">

            <LinearLayout style="@style/Doctoor.App.Layout.LinearLayout.Vertical.WrapContent"
                          android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/blood_glucose_random"
                        android:textSize="@dimen/text_primary_medium"
                        style="@style/Doctoor.App.Widget.TextView.Bold"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="@string/sample_collection"
                        style="@style/Doctoor.App.Widget.TextView.Light"/>

                <include
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        layout="@layout/layout_quantity"/>

            </LinearLayout>
            <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"/>
            <LinearLayout style="@style/Doctoor.App.Layout.LinearLayout.Vertical.WrapContent"
                          android:layout_weight="3">

                <com.Doctoor.app.widget.SquareImageView
                        android:layout_width="17dp"
                        android:layout_height="14dp"
                        app:srcCompat="@drawable/ic_cross"
                        android:layout_gravity="end"
                        android:contentDescription="@string/lab_icon"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:text="Price"
                        android:textSize="@dimen/text_primary_medium"
                        style="@style/Doctoor.App.Widget.TextView.Bold"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                        style="@style/Doctoor.App.Layout.LinearLayout.Horizontal.wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_gravity="center"
                            android:text="@string/rupees"
                            android:textAlignment="center"
                            style="@style/Doctoor.App.Widget.TextView.Light"/>
                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_gravity="center"
                            android:text="@string/five_hundred"
                            android:textAlignment="center"
                            style="@style/Doctoor.App.Widget.TextView.Bold"
                            android:textColor="@color/pink"
                            android:textSize="@dimen/text_secondary_medium"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>