<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="forgotPasswordFragmentVM"
            type="com.Doctoor.app.ui.modules.forgot_password.ForgotPasswordVM" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_blue" />

        <androidx.appcompat.widget.LinearLayoutCompat style="@style/Doctoor.App.Layout.LinearLayout.ForgotPassword">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Doctoor.App.Widget.TextView.LargeWhite.Bold"
                android:text="@string/password_forgot" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Doctoor.App.Widget.TextView.LargeWhite"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/forgot_password_instructions"
                android:textColor="@color/light_grey"
                android:textSize="@dimen/text_primary_small"
                android:lineSpacingExtra="@dimen/line_height"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat3"
            style="@style/Doctoor.App.Layout.LinearLayout.Vertical.MatchParent"
            android:padding="@dimen/padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_layout"
                style="@style/Doctoor.App.Widget.TextInputLayout">

                <com.Doctoor.app.widget.EditTextRichDrawable
                    android:id="@+id/phone"
                    style="@style/Doctoor.App.Widget.TextInputEditText.Phone"
                    android:hint="@string/phone_no"
                    android:inputType="phone"
                    app:validateMaxLength="@{15}"
                    app:validateMinLength="@{11}"
                    app:validPhone='@{"^((\\+92)|(0092))-{0,1}\\d{3}-{0,1}\\d{7}$|^\\d{11}$|^\\d{4}-\\d{7}$"}'
                    app:validateEmpty="@{true}"
                    app:validateTypeAutoDismiss="@{true}"
                    app:libIZO_setClearIconVisible="false"
                    android:imeOptions="actionDone"
                    android:text="@={forgotPasswordFragmentVM.phone}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.Doctoor.app.widget.progressbutton.CircularProgressButton
                android:id="@+id/submit"
                style="@style/Doctoor.App.Widget.Button.Login.CircularProgressButton"
                android:onClick="@{()-> forgotPasswordFragmentVM.onSubmit()}"
                android:text="@string/submit" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>